--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
   </center>
   <body>
     <p>Click on link given below to reach Resume Webpage</p>
-    <a href="file:///D:/Web%20Development/HTML-%20Personal%20site/resume.html">Click Here</a>
+    <a href="https://github.com/NikhilSagar1309/CV/blob/main/index.html">Click Here</a>
   </body>
 </html>
