--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
   </center>
   <body>
     <p>Click on link given below to reach Resume Webpage</p>
-    <a href="https://github.com/NikhilSagar1309/CV/blob/main/index.html">Click Here</a>
+    <a href="https://nikhilsagar1309.github.io/CV/">Click Here</a>
   </body>
 </html>
