--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Nikhil Resume</title>
+    <title>Nikhil's Website</title>
   </head>
-  <center>
-    <h1>Nikhil's Resume</h1>
-    <hr size-"3dp">
+  <h1 style="background-color:Red"><em>Image</em></h1>
+  <img src="PHOTOS.jpg" alt="">
+  <h1 style="background-color:Red"><em> Contanct Details<em></h1>
+  <a href="contact.html"> Click Here</a>
+  <h1 style="background-color:Red"><em> Educational Qualifications<em></h1>
+  <a href="Education Qualifications.html"> Click Here</a>
+  <body style="background-color:Purple">
 
-  </center>
-  <body>
-    <p>Click on link given below to reach Resume Webpage</p>
-    <a href="resume.html">Click Here</a>
   </body>
 </html>
