--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
   </head>
   <h1 style="background-color:Red"><em>Image</em></h1>
   <img src="PHOTOS.jpg" alt="">
+  <b>Name: Nikhil Sagar</b>
   <h1 style="background-color:Red"><em> Contanct Details<em></h1>
   <a href="contact.html"> Click Here</a>
   <h1 style="background-color:Red"><em> Educational Qualifications<em></h1>
-  <a href="Education Qualifications.html"> Click Here</a>
+  <a href="Education Qualification.html"> Click Here</a>
   <body style="background-color:Purple">
 
   </body>
