--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h1 style="background-color:Red"><em> Contanct Details<em></h1>
   <a href="contact.html"> Click Here</a>
   <h1 style="background-color:Red"><em> Educational Qualifications<em></h1>
-  <a href="Education Qualification.html"> Click Here</a>
+  <a href="Educational Qualification.html"> Click Here</a>
   <body style="background-color:Purple">
 
   </body>
