--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <h1 style="background-color:Red"><em>Image</em></h1>
   <img src="PHOTOS.jpg" alt="">
-  <b>Name: Nikhil Sagar</b>
+  <pre><b>Name: Nikhil Sagar</b></pre>
   <h1 style="background-color:Red"><em> Contanct Details<em></h1>
   <a href="contact.html"> Click Here</a>
   <h1 style="background-color:Red"><em> Educational Qualifications<em></h1>
