--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <center>
 <h1 style="background-color:Red"><em>Image</em></h1>
-<img src="PHOTO.jpg" alt="">
+<img src="PHOTOS.jpg" alt="">
 <h1 style="Color :Purple"><pre><b >Name: Nikhil Sagar</b></pre></h1>
 
 <h1 style="background-color:Red"><em> Contact Details<em></h1>
