--- a/contact.html
+++ b/contact.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Contact details</title>
-  </head>
-  <center><em><h1 style="Color : Purple">Contact details:</h1></em>
-    <hr size="4dp">
-  <body style="background-color:Orange">
-<pre>
-<h2>Email: nikhilttopp@gmail.com</h2>
-<h2>Mobile Number: 6397094155</h2></pre>
+
+<head>
+  <meta charset="utf-8">
+  <title>Contact details</title>
+</head>
+<center><em>
+    <h1 style="Color : Purple">Contact details:</h1>
+    <hr color="Purple" width=100% size="5px">
+  </em>
+  <hr size="4dp">
+
+  <body style="background-color:AntiqueWhite">
+    <pre>
+    <em><h1 style="color:purple"><u>Email:</u></h1></em>
+<h2 style="color: cornflowerBlue">nikhilttopp@gmail.com</h2>
+<em><h1 style="color:purple"><u>Mobile Number:</u></h1></em>
+<h2 style="color:cornflowerBlue">6397094155</h2></pre>
   </body>
+
 </html>
