--- a/index.html
+++ b/index.html
@@ -6,18 +6,21 @@
   <title>Nikhil's Website</title>
 </head>
 <center>
-<h1 style="background-color:Red"><em>Image</em></h1>
-<img src="PHOTOS.jpg" alt="">
-<h1 style="Color :Purple"><pre><b >Name: Nikhil Sagar</b></pre></h1>
+  <h1 style="background-color:Red"><em>Image</em></h1>
+  <img src="PHOTOS.jpg" alt="">
+  <h1 style="Color :Purple">
+    <pre><b >Name: Nikhil Sagar</b></pre>
+  </h1>
 
-<h1 style="background-color:Red"><em> Contact Details<em></h1>
-<h2>For contact details click on the link.</h2>
-<a href="contact.html"> Click Here</a>
-<h1 style="background-color:Red"><em> Educational Qualifications<em></h1>
+  <h1 style="background-color:Red"><em> Contact Details<em></h1>
   <h2>For contact details click on the link.</h2>
-<a href="eq.html"> Click Here</a>
-<h1 style="background-color:Red"><em>Objective<em></h1>
-  <h2>I want to join civil services after graduation.</h2></center>
+  <a href="contact.html"> Click Here</a>
+  <h1 style="background-color:Red"><em> Educational Qualifications<em></h1>
+  <h2>For Educational Qualifications click on the link.</h2>
+  <a href="eq.html"> Click Here</a>
+  <h1 style="background-color:Red"><em>Objective<em></h1>
+  <h2>I want to join civil services after graduation.</h2>
+</center>
 
 <body style="background-color:Violet">
 
