--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
   <h1 style="background-color:Red"><em> Educational Qualifications<em></h1>
   <h2>For Educational Qualifications click on the link.</h2>
   <a href="eq.html"> Click Here</a>
-  <h1 style="background-color:Red"><em>Objective<em></h1>
-  <h2>I want to join civil services after graduation.</h2>
+  <h1 style="background-color:Red"><em>Question 2<em></h1>
+  <h2>Click on the link given below.</h2>
+  <a href="Question2.html"></a>
 </center>
 
 <body style="background-color:Violet">
