--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <a href="eq.html"> Click Here</a>
   <h1 style="background-color:Red"><em>Question 2<em></h1>
   <h2>Click on the link given below.</h2>
-  <a href="Question2.html"></a>
+  <a href="Question2.html">Click Here</a>
 </center>
 
 <body style="background-color:Violet">
