--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <img src="PHOTOS.jpg" alt="">
   <h1 style="Color :Purple">
     <pre><b >Name: Nikhil Sagar</b></pre>
+    <hr height="3px">
   </h1>
 
   <h1 style="background-color:Red"><em> Contact Details<em></h1>
@@ -21,6 +22,12 @@
   <h1 style="background-color:Red"><em>Question 2<em></h1>
   <h2>Click on the link given below.</h2>
   <a href="Question2.html">Click Here</a>
+  <h1 style="background-color:Red"><em>Question 3<em></h1>
+  <h2>Click on the link given below.</h2>
+  <a href="Question3.html">Click Here</a>
+  <h1 style="background-color:Red"><em>Question 10<em></h1>
+  <h2>Click on the link given below.</h2>
+  <a href="form.html">Click Here</a>
 </center>
 
 <body style="background-color:Violet">
