--- a/Question3.html
+++ b/Question3.html
@@ -5,20 +5,20 @@
     <title>Question3</title>
   </head>
   <body>
-    <table width="500px" border="1">
-      <tr>
-        <td style="height:50px"></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+    <table width="500px" border="1" >
+      <tr height="50px">
+        <th>Roll NO</th>
+        <th>Name</th>
+        <th>Semester</th>
+        <th>Image</th>
+        <th>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</th>
       </tr>
-      <tr>
-        <td style="height:50px" colspan="3"></td>
-        <td colspan="2" rowspan="2"></td>
+      <tr height="50px">
+        <td  colspan="3">14002 &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Nikhil Sagar &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp III</td>
+        <td colspan="2" rowspan="2"> <img src="PHOTOS.jpg" alt="">  </td>
       </tr>
-      <tr>
-        <td style="height:50px "colspan="3"></td>
+      <tr height="50px">
+        <td  colspan="3"></td>
       </tr>
     </table>
   </body>
