--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   <h1 style="background-color:Red"><em>Image</em></h1>
   <img src="PHOTOS.jpg" alt="">
   <h1 style="Color :Purple">
-    <pre><b >Name: Nikhil Sagar</b></pre>
+    <marquee width=100% direction="right" height="100px">
+    <pre><strong>Name: Nikhil Sagar</strong></pre>
+  </marquee>
+  <strong>This is the bold text.</strong>
     <hr height="3px">
   </h1>
 
