--- a/Question2.html
+++ b/Question2.html
@@ -6,7 +6,7 @@
   <title>Question2</title>
 </head>
 
-<body>
+<body style="background-color:violet">
   <center>
     <h1>Unordered List</h1>
   </center>
