--- a/Question3.html
+++ b/Question3.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Question3</title>
   </head>
-  <body>
+  <body style="background-color:violet">
     <table width="500px" border="1" >
       <tr height="50px">
         <th>Roll NO</th>
