--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </marquee>
   <strong>This is the bold text.</strong>
     <hr height="3px">
+    <p font-size:"30px">This is an example</p>
   </h1>
 
   <h1 style="background-color:Red"><em> Contact Details<em></h1>
@@ -31,6 +32,9 @@
   <h1 style="background-color:Red"><em>Question 10<em></h1>
   <h2>Click on the link given below.</h2>
   <a href="form.html">Click Here</a>
+  <h1 style="background-color:Red"><em>Question 5<em></h1>
+  <h2>Click on the link given below.</h2>
+  <a href="Question5.html">Click Here</a>
 </center>
 
 <body style="background-color:Violet">
