--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </marquee>
   <strong>This is the bold text.</strong>
     <hr height="3px">
-    <p font-size:"30px"><u>This is an example</u></p>
+    <p font-size:"30px"><u>This is an example.</u></p>
   </h1>
 
   <h1 style="background-color:Red"><em> Contact Details<em></h1>
