--- a/Question2.html
+++ b/Question2.html
@@ -138,8 +138,8 @@
     <center>
       <h1>External Linking</h1>
       </center>
-      Click on the given link to reach google search engine.<br>
-      <a href="https://www.google.com/">Click Here</a>
+      Click on the given link to reach homepage.<br>
+      <a href="index.html">Click Here</a>
 
 
 </body>
