--- a/contact.html
+++ b/contact.html
@@ -14,9 +14,9 @@
   <body style="background-color:AntiqueWhite">
     <pre>
     <em><h1 style="color:purple"><u>Email:</u></h1></em>
-<h2 style="color: cornflowerBlue">nikhilttopp@gmail.com</h2>
+<h2 style="color: cornflowerBlue">XYZ@gmail.com</h2>
 <em><h1 style="color:purple"><u>Mobile Number:</u></h1></em>
-<h2 style="color:cornflowerBlue">6397094155</h2></pre>
+<h2 style="color:cornflowerBlue">1324576890</h2></pre>
   </body>
 
 </html>
